--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.7",
+    "highlight.js": "^11.11.1",
     "marked": "^15.0.12",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
