--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -31,8 +31,8 @@ jobs:
       # 设置 Git 信息
       - name: Set git info
         run: |
-          git config user.email "you@example.com"
-          git config user.name "orrest"
+          git config --global user.email "you@example.com"
+          git config --global user.name "${{ github.actor }}"
 
       # 部署
       - name: Deploy to gh
